# POLARIS

./: README.md  readme.txt~
LUT Creator/mkLocal/apriltags/.svn/: all-wcprops  entries
POLARIS_serial_comm/: .cproject  .project  channellocalizer.h  serial_com  serial_comm.c  serial_comm.c~
POLARIS_serial_comm/Debug/: POLARIS_serial_comm  makefile  serial_comm.d  subdir.mk
hector_slam/hector_slam_launch/launch/: geotiff_mapper.launch  geotiff_mapper.launch~  hector_mapping.launch  slam.launch  slam.launch~
hokuyo_node/: hokuyo_test.launch~
mkLUTCreator/apriltags/.svn/: entries
mkLUTCreator/apriltags/example/: LUT.txt  channelrecognition.h  collectedArray.txt  globalCameraPosition.txt  localTagPose.txt  localization_include.py  localization_include.py~  slam_include.py
mkLocalization/apriltags/: starterScript
mkLocalization/apriltags/example/: LUTReaderSLOW.py  cgposition_include.py  localizer.py  localizer_include.py  recognition_include.py
pioneer3dx/pioneer_2dnav/: manifest.xml~
pioneer3dx/pioneer_2dnav/launch/: .move_base_isr_map.launch.swp  .pioneer_bringup.launch.swp  move_base_isr_map.launch  move_base_isr_map.launch~  pioneer_bringup.launch
pioneer3dx/pioneer_2dnav/maps/: wifi.txt
pioneer3dx/pioneer_teleop/launch/: 3dxControl
robot_pose/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.bak  package.xml
robot_pose/src/: channelslam.h  pose.cpp  pose_listener.cpp  pose_listener.cpp~
robot_serial_com/: .cproject  .project  serial_com  serial_comm.c  serial_comm.c~
robot_serial_com/Debug/: makefile  robot_serial_comm  subdir.mk
serial_talker/: Makefile  MsgRcvr  MsgRcvr.c  MsgRcvr.c~
seriallistener/: CMakeLists.txt  CMakeLists.txt~  package.xml
seriallistener/src/: seriallistener.cpp
(+110 files in other folders)
